# zmeika

./: CMakeLists.txt  README.md  SnakeGame.pro  main.cpp  package_config.json  package_graph.json  pubspec.yaml  snakegame.cpp  snakegame.h
android/app/: build.gradle.kts
android/app/src/main/kotlin/com/example/zmeika/: MainActivity.kt
flutter_build/45e702511a6d0ab77b76d7476a35ce91/: .filecache  dart_build.d  dart_build.stamp  dart_build_result.json  debug_bundle_windows-x64_assets.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json  unpack_windows.stamp  windows_engine_sources.d
flutter_build/76b14de94adba876713f887f854f3eef/: .filecache  dart_build.d  dart_build.stamp  dart_build_result.json  debug_android_application.stamp  flutter_assets.d  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json
ios/Runner.xcodeproj/: project.pbxproj
lib/: INTEGRATION_GUIDE.dart  ascii_theme.dart  brawl_stars_theme.dart  classic_theme.dart  commander_theme.dart  doom_theme.dart  game_theme.dart  main.dart  main.dart.backup  main.dart.backup2  nfs_theme.dart  starcraft_theme.dart  storage_service.dart  theme_selector.dart  theme_service.dart
test/: widget_test.dart
